<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/common_padding_min">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_default">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEstado"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_estado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/actvEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNombresProductos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Disco duro WD 2 TB, Smart Phonem camisa, postre , etc..."
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvId"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_chat_help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNombresProductos"
            app:layout_constraintBottom_toTopOf="@id/tilEstado"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPrecioTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total_price"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/chipChat"
            app:layout_constraintBottom_toBottomOf="@id/chipChat"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>